Added label support

--- a/locale/en/blueprint-string.cfg
+++ b/locale/en/blueprint-string.cfg
@@ -1,10 +1,6 @@
-main-button=Blueprint
 save=Save
-save-all=Save All
-save-as=Save As...
-save-as-2=Save as:
+save-as=Save as:
 cancel=Cancel
-load-string=Load String
 textbox-caption=Blueprint String:
 blueprints-saved=__1__ blueprints saved to 'script-output/blueprint-string'
 blueprint-saved-as=__1__.txt saved to 'script-output/blueprint-string'
@@ -16,3 +12,4 @@ no-filename=Please enter a file name for this blueprint.
 no-blueprint-in-hand=Please click this button while holding a blueprint.
 blueprint-api-error=Blueprint error: __1__
 blueprint-icon-error=Blueprint icon error: __1__
+need-advanced-circuit=You need __1__ advanced circuit.
