--- a/locale/en/blueprint-string.cfg
+++ b/locale/en/blueprint-string.cfg
@@ -13,3 +13,5 @@ no-blueprint-in-hand=Please click this button while holding a blueprint.
 blueprint-api-error=Blueprint error: __1__
 blueprint-icon-error=Blueprint icon error: __1__
 need-advanced-circuit=You need __1__ advanced circuit.
+need-blueprint=You need a blueprint to load that.
+need-blueprint-book=You need a blueprint book to load that.
