Added 0.15 error message

--- a/locale/en/blueprint-string.cfg
+++ b/locale/en/blueprint-string.cfg
@@ -16,3 +16,4 @@ blueprint-icon-error=Blueprint icon error: __1__
 need-advanced-circuit=You need __1__ advanced circuit.
 need-blueprint=You need a blueprint to load that.
 need-blueprint-book=You need a blueprint book to load that.
+new-style-string=Press B to import that blueprint string.
